--- a/debugging/PenghubungDB/App.config
+++ b/debugging/PenghubungDB/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="KoneksiDB"
-			 connectionString="Host=192.168.1.25;Port=8080;Database=Cantiknya Mahar;Username=postgres;Password=ns4dpn"
+			 connectionString="Host=serveo.net;Port=8081;Database=Cantiknya Mahar;Username=postgres;Password=ns4dpn"
 			 providerName="Npgsql.EntityFrameworkCore.PostgreSQL"/>
 	</connectionStrings>
 </configuration>
